--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,35 @@
 {
-    "require": {
-        "firebase/php-jwt": "^6.0",
-        "mf2/mf2": "^0.5",
-        "barnabywalters/mf-cleaner": "^0.2"
-    },
     "require-dev": {
-        "phpunit/phpunit": "^8.4"
+        "mf2/mf2": "^0.5",
+        "barnabywalters/mf-cleaner": "^0.2",
+        "firebase/php-jwt": "^6.0",
+        "humbug/php-scoper": "^0.18.3"
     },
     "autoload": {
+        "classmap": [
+            "libs/"
+        ],
+        "files": [
+            "libs/mf2/mf2/Mf2/Parser.php",
+            "libs/barnabywalters/mf-cleaner/src/functions.php"
+        ],
         "psr-4": {
             "IndieAuth\\": "src/IndieAuth/"
         }
+    },
+    "scripts": {
+        "prefix-dependencies": [
+            "@php ./vendor/humbug/php-scoper/bin/php-scoper add-prefix --output-dir=./libs --config=config/php-scoper/scoper.inc.php --force --quiet"
+        ],
+        "pre-install-cmd": [
+            "mkdir -p libs"
+        ],
+        "pre-update-cmd": [
+            "mkdir -p libs"
+        ],
+        "post-autoload-dump": [
+            "@prefix-dependencies",
+            "composer dump-autoload --no-scripts"
+        ]
     }
 }
